crates/bubbletea-macros/tests/ui/fail/unit_struct_not_supported.rs
//! Test that derive(Model) fails on unit structs.

use bubbletea::Model;

#[derive(Model)]
struct UnitStruct;

fn main() {}
